--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -9,6 +9,8 @@ header {
 	background-color: #0C5BE8;
 	padding: 2em;
 	text-align: center;
+	width: 100%;
+	margin-left: -10px;
 
 }
 
@@ -22,12 +24,13 @@ header {
 	text-decoration: none;
 	z-index: 1;
 	font-weight: bold;
+	font-size: 20px;
 }
 
-img {
-	padding: 2em;
-	display: block;
+.photo {
+	padding: 4em;
 	float: left;
+	margin: 20px;
 }	
 
 footer {
@@ -49,11 +52,12 @@ footer {
 #social a {
 	
 	list-style-type: none;
-	margin: 50px;
+	margin: 40px;
 	float: left;
 	text-decoration: none;
 	z-index: 1;
 	font-weight: bold;
+	
 
 
 }
@@ -62,30 +66,41 @@ footer {
 	
 	position: absolute;
 	top: 40%;
-	left: 25%;
-	border: 2px solid #0C5BE8;
-	padding: 4px;
-
+	left: 15%;
+	border: 4px solid #0C5BE8;
+	padding: 50px;
+	padding-right: 200px;
+	border-radius: 5%;
+	display: inline-block;
+	margin; auto;
 	
 }
 
 .technical-blog a {
 	display: block;
-	padding: 1px;
-	border: 1px solid #0C5BE8;
+	padding: 2px;
+	border: 2px solid #0C5BE8;
 }
 .cultural-blog {
 
 	position: absolute;
 	top: 40%;
-	left: 50%;
-	border: 2px solid #0C5BE8;
-	padding: 4px;
+	left: 55%;
+	border: 4px solid #0C5BE8;
+	padding: 50px;
+	padding-right: 200px;
+	border-radius: 5%;
+	display: inline-block;
 }
 
 .cultural-blog a {
 	display: block;
-	padding: 1px;
-	border: 1px solid #0C5BE8;
+	padding: 2px;
+	border: 2px solid #0C5BE8;
+}
 
+.blog {
+	width: 80%;
+	margin: auto;
 
+}
