--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -60,11 +60,11 @@ header {
 
 	position: absolute;
 	display: inline-block;
-	/*max-height: 308px;
-	max-width: 450px; */
-	width: 34%;
+	max-height: 308px;
+	max-width: 450px; 
+	width: 30%;
 	padding: 1em;
-	left: 32%;
+	margin-left: 32%;
 	/*min-width: 30px;
 	min-height: 45px;*/
 
