--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -169,3 +169,11 @@ pre {
 	border: 1px solid black;
 	overflow: auto;
 }
+
+.resume {
+	width: 50%;
+	margin: auto;
+	text-align: left;
+	padding: 1em;
+
+}
