--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -32,6 +32,7 @@ header {
 }
 
 .menu ul {
+	font-family: 'Shadows+Into+Light';
 	list-style-type: none;
 	/* margin: 50px; */
 	/*float: right; */
@@ -40,8 +41,9 @@ header {
 	text-decoration: none;
 	z-index: 1;
 	font-weight: bold;
-	font-size: 20px;
+	font-size: 24px;
 	padding-left: 1em;
+	display: inline-block;
 
 }
 
@@ -55,10 +57,11 @@ header {
 
 }
 
+
 #photo {
 
-	position: absolute;
-	display: inline-block;
+	position: relative;
+	
 	max-height: 308px;
 	max-width: 450px; 
 	width: 30%;
@@ -74,17 +77,6 @@ header {
 	padding: 1em;
 
 }	
-/*
-footer {
-	position: relative;
-	top: 90%; 
-	background-color: #062944;
-	padding: 2em;
-	clear: both;
-	width: 100%;
-	margin-left: -10px;
-}
-*/
 
 footer {
 	background-color: #062944;
